# powerstate

./: Cargo.toml  README.md
src/: batteries.rs  lib.rs  os_impl.rs
src/examples/: test_macos.rs  test_windows.rs
src/os_impl/: linux.rs  macos.rs  windows.rs
