[package]
name = "powerstate"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
thiserror = "2"
oneshot = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Power",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
