[package]
name = "powerstate"
version = "0.1.0"
edition = "2024"

[[example]]
name = "test_macos"
path = "src/examples/test_macos.rs"
harness = false

[[example]]
name = "test_windows"
path = "src/examples/test_windows.rs"
harness = false

[dependencies]
log = "0.4"
thiserror = "2"
oneshot = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_System_Power",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }


[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { git = "https://github.com/gety-ai/objc2", rev = "030902d" }
objc2-core-foundation = { git = "https://github.com/gety-ai/objc2", rev = "030902d" }
objc2-io-kit = { git = "https://github.com/gety-ai/objc2", rev = "030902d" }
