[package]
name = "powerstate"
version = "0.2.0"
edition = "2024"

[[example]]
name = "test_macos"
path = "src/examples/test_macos.rs"
harness = false

[[example]]
name = "test_windows"
path = "src/examples/test_windows.rs"
harness = false

[dev-dependencies]
simple-logging = "2.0.2"

[dependencies]
log = "0.4"
thiserror = "2"
oneshot = "0.1"
starship-battery = "0.10"
strum = { version = "0.27", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Power",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }


[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-core-foundation = "0.3.2"
objc2-io-kit = "0.3.2"